fix: Homepage spacing

--- a/src/index.css
+++ b/src/index.css
@@ -10,13 +10,12 @@
 }
 body {
   min-height: 100dvh;
-
 }
 #root {
   margin: 0 auto;
   padding: 16px 32px;
   text-align: center;
-  height: 100dvh;
+  min-height: 100dvh;
 }
 
 :root {
